# serializer version: 1
# name: test_fixed_json_safe_case[case0.json]
  dict({
    'age': 330,
    'email': 'johndoe@example.com',
    'name': 'John Doe',
  })
# ---
# name: test_fixed_json_safe_case[case1.json]
  dict({
    'location': 'New York',
    'person': dict({
      'age': 225,
      'name': 'Alice',
    }),
  })
# ---
# name: test_fixed_json_safe_case[case10.json]
  dict({
    'message': '''
      This is an escaped string with special characters: "quotes", \backslashes\, and 
      newlines.
    ''',
  })
# ---
# name: test_fixed_json_safe_case[case11.json]
  dict({
    'unicode_example': 'This is a Unicode string: © OpenAI •',
  })
# ---
# name: test_fixed_json_safe_case[case2.json]
  dict({
    'fruits': list([
      dict({
        'color': 'red',
        'fruit': 'apple',
      }),
      dict({
        'color': 'yellow',
        'fruit': 'banana',
      }),
    ]),
  })
# ---
# name: test_fixed_json_safe_case[case3.json]
  dict({
    'employees': list([
      dict({
        'id': 1101,
        'name': 'Employee 1',
      }),
      dict({
        'id': 1102,
        'name': 'Employee 2',
      }),
    ]),
  })
# ---
# name: test_fixed_json_safe_case[case4.json]
  dict({
    'age': None,
    'email': None,
    'name': 'Jane Smith',
  })
# ---
# name: test_fixed_json_safe_case[case5.json]
  dict({
    'active': False,
    'status': True,
  })
# ---
# name: test_fixed_json_safe_case[case6.json]
  dict({
    'float': 33.14,
    'integer': 442,
  })
# ---
# name: test_fixed_json_safe_case[case7.json]
  dict({
    'colors': list([
      'red',
      'green',
      'blue',
    ]),
  })
# ---
# name: test_fixed_json_safe_case[case8.json]
  dict({
    'emptyObject': dict({
    }),
  })
# ---
# name: test_fixed_json_safe_case[case9.json]
  dict({
    'hobbies': list([
      'reading',
      'hiking',
    ]),
    'person': dict({
      'address': dict({
        'city': 'Cityville',
        'street': '123 Main St',
        'zip': '12345',
      }),
      'name': 'Bob',
    }),
  })
# ---
# name: test_fixed_json_simple_case
  dict({
  })
# ---
# name: test_fixed_json_simple_case.1
  dict({
    'foo': 'bar',
  })
# ---
# name: test_fixed_json_simple_case.2
  dict({
    'baz': 'qux',
    'foo': 'bar',
  })
# ---
# name: test_fixed_json_simple_case.3
  dict({
    'baz': 'qux',
    'foo': 'bar',
    'quux': 'corge',
  })
# ---
# name: test_fixed_json_simple_case.4
  dict({
    'foo': dict({
      'bar': 'baz',
    }),
  })
# ---
# name: test_fixed_json_simple_case.5
  dict({
    'foo': dict({
      'bar': dict({
        'baz': 'qux',
      }),
    }),
  })
# ---
# name: test_fixed_json_simple_case.6
  dict({
    'foo': dict({
      'bar': dict({
        'baz': dict({
          'qux': 'quux',
        }),
      }),
    }),
  })
# ---
